# essential-base

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/asm/: Cargo.toml  README.md
crates/asm-gen/: Cargo.toml  README.md  asm.yml
crates/asm-gen/src/: de.rs  lib.rs  visit.rs
crates/asm-spec/: Cargo.toml  README.md  asm.yml
crates/asm-spec/src/: lib.rs  visit.rs
crates/asm/src/: effects.rs  lib.rs
crates/check/: Cargo.toml  README.md
crates/check/benches/: check_contract.rs  check_intents.rs
crates/check/src/: intent.rs  lib.rs  predicate.rs  solution.rs
crates/check/src/predicate/: tests.rs
crates/check/src/solution/: test_graph_ops.rs  test_state_read_fallback.rs  tests.rs
crates/check/tests/: encoding.rs  intent.rs  predicate.rs  solution.rs  throughput.rs  util.rs
crates/constraint-asm/: Cargo.toml  README.md
crates/constraint-asm/src/: lib.rs
crates/constraint-vm/: Cargo.toml  README.md
crates/constraint-vm/benches/: eval.rs
crates/constraint-vm/src/: access.rs  alu.rs  bytecode.rs  cached.rs  crypto.rs  error.rs  gas.rs  lib.rs  memory.rs  op_access.rs  pred.rs  repeat.rs  stack.rs  total_control_flow.rs
crates/constraint-vm/src/access/: dec_vars.rs  num_slots.rs  predicate_exists.rs  pub_vars.rs  state.rs  test_utils.rs  tests.rs
crates/constraint-vm/src/crypto/: tests.rs
crates/constraint-vm/src/gas/: tests.rs
crates/constraint-vm/src/memory/: tests.rs
crates/constraint-vm/src/pred/: tests.rs
crates/constraint-vm/src/repeat/: tests.rs
crates/constraint-vm/src/stack/: frame_tests.rs
crates/constraint-vm/src/total_control_flow/: tests.rs
crates/constraint-vm/tests/: fold.rs  repeats.rs
crates/constraint_asm/: Cargo.toml
crates/constraint_asm/src/: lib.rs
crates/guest/: Cargo.toml
crates/guest/src/: lib.rs
crates/hash/: Cargo.toml  README.md
crates/hash/src/: address_impl.rs  block_addr.rs  contract_addr.rs  intent_set_addr.rs  lib.rs  solution_addr.rs  solution_set_addr.rs
crates/hash/tests/: hash.rs
crates/lock/: Cargo.toml  README.md
crates/lock/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: check.rs  data.rs  db.rs  intent.rs  lib.rs  op.rs  solution.rs  state_read.rs
crates/server/src/check/: tests.rs
crates/server/src/state_read/: vm.rs  wasm.rs
crates/server/tests/: integration.rs  mut_keys.rs  vm.rs  yurt.rs
crates/sign/: Cargo.toml  README.md
crates/sign/src/: contract.rs  encode.rs  intent_set.rs  lib.rs
crates/sign/tests/: sign.rs
crates/state-asm/: Cargo.toml  README.md
crates/state-asm/src/: analyse_reads.rs  effects.rs  lib.rs
crates/state-read-vm/: Cargo.toml
crates/state-read-vm/src/: bytecode.rs  ctrl_flow.rs  error.rs  future.rs  lib.rs  memory.rs  state_memory.rs  state_read.rs  state_slots_mut.rs
crates/state-read-vm/src/state_memory/: tests.rs
crates/state-read-vm/tests/: bytecode.rs  ctrl_flow.rs  memory.rs  state_read.rs  state_slots.rs  util.rs  vm.rs
crates/state_asm/: Cargo.toml
crates/state_asm/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: contract.rs  conversions.rs  convert.rs  fmt.rs  intent.rs  lib.rs  predicate.rs  serde.rs  signature_ser.rs  slots.rs  solution.rs
crates/types/src/predicate/: encode.rs  encode_predicate.rs  header.rs  tests.rs
crates/types/src/predicate/encode/: tests.rs
crates/types/src/predicate/encode_predicate/: tests.rs
crates/types/src/predicate/header/: error.rs  tests.rs
crates/types/src/serde/: bytecode.rs  content_address.rs  hash.rs  signature.rs
crates/types/src/solution/: decode.rs  encode.rs
crates/types/src/solution/decode/: tests.rs
crates/types/src/solution/encode/: tests.rs
crates/types/tests/: fmt.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
crates/vm/: Cargo.toml  README.md
crates/vm/benches/: eval.rs
crates/vm/src/: access.rs  alu.rs  bytecode.rs  cached.rs  compute.rs  constraint.rs  crypto.rs  error.rs  future.rs  lib.rs  memory.rs  old-error.rs  op_access.rs  pred.rs  repeat.rs  sets.rs  stack.rs  state_read.rs  sync.rs  total_control_flow.rs  vm.rs
crates/vm/src/access/: dec_vars.rs  predicate_exists.rs  test_utils.rs  tests.rs
crates/vm/src/alu/: shifts.rs
crates/vm/src/compute/: tests.rs
crates/vm/src/crypto/: tests.rs
crates/vm/src/memory/: tests.rs
crates/vm/src/pred/: tests.rs
crates/vm/src/repeat/: tests.rs
crates/vm/src/sets/: tests.rs
crates/vm/src/stack/: frame_tests.rs
crates/vm/src/state_read/: tests.rs
crates/vm/src/total_control_flow/: tests.rs
crates/vm/tests/: bytecode.rs  compute.rs  repeats.rs  state_read.rs  sync_vs_async.rs  throughput.rs  util.rs  vm.rs
wasm/test_erc20/: Cargo.toml
wasm/test_erc20/src/: lib.rs
wasm/test_state_read/: Cargo.toml
wasm/test_state_read/src/: lib.rs
