[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-base"

[workspace.dependencies]
bitflags = "2.6"
criterion = "0.5"
ed25519-dalek = "2.1.1"
essential-asm = { path = "crates/asm", version = "0.5.0" }
essential-asm-gen = { path = "crates/asm-gen", version = "0.5.0" }
essential-asm-spec = { path = "crates/asm-spec", version = "0.4.0" }
essential-hash = { path = "crates/hash", version = "0.5.0" }
essential-sign = { path = "crates/sign", version = "0.5.0" }
essential-vm = { path = "crates/vm", version = "0.6.0" }
essential-types = { path = "crates/types", version = "0.4.0" }
futures = "0.3" # For `vm` tests.
hex = "0.4.3"
postcard = { version = "1.0.10", features = ["alloc"] }
proc-macro2 = "1"
quote = "1"
rand = { version = "0.8", features = ["small_rng"] } # For `vm` tests.
schemars = "0.8.21"
secp256k1 = { version = "0.30", features = ["recovery"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10.8"
syn = { version = "2", features = ["extra-traits", "full", "printing"] }
tempfile = "3.9.0"
test-case = "3.3.1"
thiserror = "1"
tokio = { version = "1.41", default-features = false, features = ["macros", "test-util"] }
tracing = {version = "0.1", features = ["attributes"]}
tracing-subscriber = "0.3.18"
