[package]
name = "essential-asm-gen"
version = "0.5.0"
description = "proc-macro for generating Essential ASM types from spec"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
essential-asm-spec.workspace = true
essential-types.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
