[package]
name = "essential-asm-spec"
version = "0.7.0"
description = "Parses Essential assembly specification yaml"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
