[package]
name = "essential-check"
description = "Core logic related to validating Essential state transitions."
version = "0.1.0"
edition.workspace = true

[dependencies]
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true, optional = true }
essential-sign = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-types = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
essential-hash = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["rand-std"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
tracing = ["dep:essential-hash", "dep:tracing"]

[[bench]]
name = "check_intents"
harness = false