[package]
description = "Core logic related to validating Essential state transitions."
name = "essential-check"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true, optional = true }
essential-sign = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-types = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
essential-hash = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["rand", "std"] }
sha2 = { workspace = true }
tracing-subscriber.workspace = true

[features]
tracing = [
    "dep:essential-hash",
    "dep:tracing",
    "essential-constraint-vm/tracing",
    "essential-state-read-vm/tracing",
]

[[bench]]
harness = false
name = "check_contract"
