[package]
description = "Core logic related to validating Essential state transitions."
name = "essential-check"
version = "0.13.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true, optional = true }
essential-sign = { workspace = true }
essential-types = { workspace = true }
essential-vm = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
essential-hash = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["rand", "std"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt"] }
tracing-subscriber.workspace = true

[features]
tracing = [
    "dep:essential-hash",
    "dep:tracing",
    "essential-vm/tracing",
]

[[bench]]
harness = false
name = "check_contract"
