[package]
name = "essential-constraint-asm"
version = "0.5.0"
description = "Assembly operations for the essential constraint VM"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-asm-gen.workspace = true
essential-types.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
