[package]
name = "essential-constraint-vm"
version = "0.3.0"
description = "The Essential constraint checking VM"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
essential-constraint-asm = { workspace = true }
essential-types = { workspace = true }
rayon = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["rand"]}

[features]
tracing = ["dep:tracing"]

[[bench]]
name = "eval"
harness = false