[package]
name = "essential-constraint-vm"
version = "0.5.0"
description = "The Essential constraint checking VM"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
essential-types = { workspace = true }
rayon = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["rand"]}
test-case.workspace = true
tracing-subscriber.workspace = true

[features]
tracing = ["dep:tracing"]
