[package]
name = "essential-hash"
description = "A minimal crate containing Essential's hash method and associated pre-hash serialization implementation."
version = "0.10.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-types = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
