[package]
edition = "2021"
name = "intent-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ed25519-dalek = "2.1.0"
sha2 = "0.10.8"

# TODO: Choose or build a better bytecode encoding
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
