[package]
edition.workspace = true
name = "intent-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.79"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.8"

state_asm.workspace = true
essential_types.workspace = true

serde.workspace = true
serde_json.workspace = true

yurtc = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[features]
default = []
yurt = ["dep:yurtc", "dep:tempfile", "dep:hex"]
