[package]
name = "essential-sign"
version = "0.12.0"
description = "Public key cryptography for the Essential ecosystem"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-hash = { workspace = true }
essential-types = { workspace = true }
secp256k1 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["rand", "std"] }
