[package]
name = "essential-state-asm"
version = "0.4.0"
description = "Assembly operations for the Essential state read VM"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
essential-asm-gen.workspace = true
essential-constraint-asm.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
