[package]
name = "essential-state-read-vm"
version = "0.4.0"
description = "The Essential state reading VM"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-constraint-vm = { workspace = true }
essential-state-asm = { workspace = true }
essential-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[features]
tracing = ["dep:tracing"]
