[package]
edition = "2021"
name = "state_asm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constraint_asm = { path = "../constraint_asm" }
# TODO: Choose or build a better bytecode encoding
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
