[package]
name = "essential-types"
version = "0.3.0"
description = "Base types for the Essential ecosystem"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true, features = ["serde"] }
schemars = { workspace = true, optional = true }
serde.workspace = true

[features]
schema = ["dep:schemars"]
