[package]
name = "essential-vm"
version = "0.11.0"
description = "The Essential VM"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
essential-asm = { workspace = true }
essential-types = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["rand"]}
test-case.workspace = true
tokio = { workspace = true }
tracing-subscriber.workspace = true

[features]
tracing = ["dep:tracing"]

[[bench]]
name = "eval"
harness = false
